--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ2aVAEA5ccOgFiPkM6vU6",
+      "authorship_tag": "ABX9TyMAqGq711ZLYGnEc5Xob7RQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,8 +35,20 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "def removeDuplicates(s:str,k:int):\n",
+        "  "
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "_IcmqjtzvqEh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
