--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMAqGq711ZLYGnEc5Xob7RQ",
+      "authorship_tag": "ABX9TyM86xZezy+UL+XMOEWd3gVZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "mACLgLYHPJO7"
       },
       "outputs": [],
       "source": [
         "def removeDuplicates(s:str,k:int):\n",
-        "  "
+        "  stack = []   #[char,count]\n",
+        "  for char in s:\n",
+        "    if stack and stack[-1][0] == char:\n",
+        "      stack[-1][1] +=1\n",
+        "    else:\n",
+        "      stack.append([c,1])\n",
+        "    \n",
+        "    if stack[-1][1] == k:\n",
+        "      stack.pop()\n",
+        "  \n",
+        "  res = \"\"\n",
+        "\n",
+        "  for char, count in stack:\n",
+        "    res += (char*count)\n",
+        "  \n",
+        "  return res \n"
       ]
     },
     {
