--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNzZ/idcJYeNFVDN6UwOYZm",
+      "authorship_tag": "ABX9TyMNi6x4QB/9rKDNUl0H2SMI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,11 +93,11 @@
         "print(stack_freq(\"abbaa\"))"
       ],
       "metadata": {
-        "id": "6sDQq49ZzT9z",
-        "outputId": "19b43fa6-7d36-430d-cded-14a3bf41a7bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6sDQq49ZzT9z",
+        "outputId": "19b43fa6-7d36-430d-cded-14a3bf41a7bc"
       },
       "execution_count": 12,
       "outputs": [
@@ -143,11 +143,11 @@
         "print(compress(\"aabba\"))"
       ],
       "metadata": {
-        "id": "o80AZl-q7FFT",
-        "outputId": "8b231130-5e68-47dd-d96b-571a6925e7ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o80AZl-q7FFT",
+        "outputId": "8b231130-5e68-47dd-d96b-571a6925e7ad"
       },
       "execution_count": 17,
       "outputs": [
@@ -156,6 +156,62 @@
           "name": "stdout",
           "text": [
             "a2b2a1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List \n",
+        "def maxProductArray(nums:List[int]):\n",
+        "  result = nums[0]\n",
+        "  for i in range(len(nums)):\n",
+        "    accum = 1\n",
+        "    for j in range(i,len(nums)):\n",
+        "      #print(nums[j])\n",
+        "      accum *= nums[j]\n",
+        "      #print(accum)\n",
+        "\n",
+        "      result = max(accum,result)\n",
+        "      print([i,j,result])\n",
+        "  return result \n"
+      ],
+      "metadata": {
+        "id": "r4QUeDQ22dWP"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(maxProductArray([2,3,-2,4]))"
+      ],
+      "metadata": {
+        "id": "tg7f9VR03rBR",
+        "outputId": "6b0cb6ee-7245-456a-a733-9025aa6d04d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 0, 2]\n",
+            "[0, 1, 6]\n",
+            "[0, 2, 6]\n",
+            "[0, 3, 6]\n",
+            "[1, 1, 6]\n",
+            "[1, 2, 6]\n",
+            "[1, 3, 6]\n",
+            "[2, 2, 6]\n",
+            "[2, 3, 6]\n",
+            "[3, 3, 6]\n",
+            "6\n"
           ]
         }
       ]
