--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMNi6x4QB/9rKDNUl0H2SMI",
+      "authorship_tag": "ABX9TyMOmVkeN/Vj0lUlU5ImeYqo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,14 +186,25 @@
     {
       "cell_type": "code",
       "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "6Jni2sidgKgu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(maxProductArray([2,3,-2,4]))"
       ],
       "metadata": {
-        "id": "tg7f9VR03rBR",
-        "outputId": "6b0cb6ee-7245-456a-a733-9025aa6d04d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tg7f9VR03rBR",
+        "outputId": "6b0cb6ee-7245-456a-a733-9025aa6d04d3"
       },
       "execution_count": 11,
       "outputs": [
@@ -215,6 +226,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def subArraySum(nums,k):\n"
+      ],
+      "metadata": {
+        "id": "psfJMld1gLn6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
