--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMOmVkeN/Vj0lUlU5ImeYqo",
+      "authorship_tag": "ABX9TyPyyIHkHkgPb7oByktfNr36",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "mACLgLYHPJO7"
       },
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "_IcmqjtzvqEh"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
         "id": "6sDQq49ZzT9z",
         "outputId": "19b43fa6-7d36-430d-cded-14a3bf41a7bc"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "z3piJueU5pxR"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
         "id": "o80AZl-q7FFT",
         "outputId": "8b231130-5e68-47dd-d96b-571a6925e7ad"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +180,7 @@
       "metadata": {
         "id": "r4QUeDQ22dWP"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
         "id": "tg7f9VR03rBR",
         "outputId": "6b0cb6ee-7245-456a-a733-9025aa6d04d3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,13 +230,108 @@
     {
       "cell_type": "code",
       "source": [
-        "def subArraySum(nums,k):\n"
+        "from typing import List\n",
+        "from collections import defaultdict\n",
+        "def subArraySum(nums:List[int],k):\n",
+        "\n",
+        "  dic = defaultdict(int)\n",
+        "  dic.setdefault(0,1)\n",
+        "\n",
+        "  summ = 0 \n",
+        "  count = 0 \n",
+        "\n",
+        "  for num in nums:\n",
+        "    summ +=num \n",
+        "    temp = summ-k \n",
+        "\n",
+        "    if temp in dic:\n",
+        "      count +=dic[temp]\n",
+        "    dic[summ] +=1\n",
+        "\n",
+        "  return count\n",
+        "\n",
+        " \n",
+        "  \n",
+        "\n"
       ],
       "metadata": {
         "id": "psfJMld1gLn6"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List\n",
+        "def plusOne(digits:List[int]):\n",
+        "  res = \"\"\n",
+        "\n",
+        "  for item in digits:\n",
+        "    res += str(item)\n",
+        "\n",
+        "  num = int(res)+1\n",
+        "  \n",
+        "  for k in str(num):\n",
+        "    print(k)\n",
+        "\n",
+        "  result = [int(i) for i in str(num)]\n",
+        "\n",
+        "  return result "
+      ],
+      "metadata": {
+        "id": "O8DvV4L1setd"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(plusOne([9]))"
+      ],
+      "metadata": {
+        "id": "Rv8EHm70rYu8",
+        "outputId": "9ca04e86-8963-4593-efbf-563584a74962",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "0\n",
+            "[1, 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(subArraySum([1,1,1],2))"
+      ],
+      "metadata": {
+        "id": "yCwCnNl4kZiF",
+        "outputId": "042a7c40-1204-46b6-bd15-d36e2eb9eb62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
     }
   ]
 }
