--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPyyIHkHkgPb7oByktfNr36",
+      "authorship_tag": "ABX9TyPgLpD5V6ybG5rVY2YMWLfV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -257,7 +257,7 @@
       "metadata": {
         "id": "psfJMld1gLn6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -282,7 +282,7 @@
       "metadata": {
         "id": "O8DvV4L1setd"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +322,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,6 +332,37 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def numberOfIslands(grid):\n",
+        "\n",
+        "  def dfs(grid,row,col):\n",
+        "    if row < 0 or row >= len(grid) or col <0 or col >= len(grid[0]) or grid[row][col] == '0':\n",
+        "      return\n",
+        "\n",
+        "    grid[row][col] = '0'\n",
+        "    dfs(grid,row+1,col)\n",
+        "    dfs(grid,row-1,col)\n",
+        "    dfs(grid,row,col+1)\n",
+        "    dfs(grid,row,col-1)\n",
+        "\n",
+        "  count = 0 \n",
+        "\n",
+        "  for row in range(len(grid)):\n",
+        "    for col in range(len(grid[0])):\n",
+        "      if grid[row][col] == '1':\n",
+        "        count +=1\n",
+        "        dfs(grid,row,col)\n",
+        "  \n",
+        "  return count "
+      ],
+      "metadata": {
+        "id": "_WHa7B9RRjzn"
+      },
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
