--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPgLpD5V6ybG5rVY2YMWLfV",
+      "authorship_tag": "ABX9TyMyEMq3ef65oB/GUz4z/3ec",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -363,6 +363,246 @@
       },
       "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Node:\n",
+        "\n",
+        "  def __init__(self,val,next):\n",
+        "    self.val = val \n",
+        "    self.next = next"
+      ],
+      "metadata": {
+        "id": "yjDCpizqWihI"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse_linked_list(head:Node):\n",
+        "  pass \n"
+      ],
+      "metadata": {
+        "id": "dP6EyhYzWqPc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse_int(num):\n",
+        "\n",
+        "  result = \"\"\n",
+        "\n",
+        "  if abs(num):\n",
+        "    num_str = str(abs(num))\n",
+        "    for i in range(len(num_str)-1,-1,-1):\n",
+        "      if  num_str[i] !='0':\n",
+        "        result += num_str[i]\n",
+        "  \n",
+        "  if num < 0:\n",
+        "    print(result* (-1))\n",
+        "    return  result * (-1)\n",
+        "  else:\n",
+        "    return result \n"
+      ],
+      "metadata": {
+        "id": "pjv6jSs5e4Qx"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(reverse_int(-123))"
+      ],
+      "metadata": {
+        "id": "Lyc6qmWdgZb6",
+        "outputId": "a558ebb9-234e-4ddf-9ed4-cab29920df20",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def backspace(s1,s2):\n",
+        "  stack1 = []\n",
+        "  stack2 = []\n",
+        "\n",
+        "  for char in s1:\n",
+        "    if stack1 and char == '#':\n",
+        "      stack1.pop()\n",
+        "    else:\n",
+        "      stack1.append(char)\n",
+        "  \n",
+        "  for char in s2:\n",
+        "    if stack2 and char == '#':\n",
+        "      stack2.pop()\n",
+        "    else:\n",
+        "      stack2.append(char)\n",
+        "  return stack1 == stack2"
+      ],
+      "metadata": {
+        "id": "zU9zTiQPoEWq"
+      },
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "backspace(\"ab#c\",\"ad#c\")"
+      ],
+      "metadata": {
+        "id": "irYhy9MHpHGj",
+        "outputId": "dafa0c79-a039-447d-c401-d1fa0c0b69b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def findCommonChars(arr:List[str]):\n",
+        "  pass \n"
+      ],
+      "metadata": {
+        "id": "y2BsPVWxqqG0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def first_unique_char(s:str):\n",
+        "  dic = {}\n",
+        "\n",
+        "  for char in s:\n",
+        "    if char in dic:\n",
+        "      dic[char] +=1\n",
+        "    else:\n",
+        "      dic[char] =1 \n",
+        "  \n",
+        "  for char in s:\n",
+        "    if dic[char] ==1:\n",
+        "      return char \n",
+        "  return -1\n",
+        "  \n",
+        "  "
+      ],
+      "metadata": {
+        "id": "LE33fCvrAdqw"
+      },
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "3xjm4RcFKQiM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(first_unique_char(\"lldeetcodea\"))"
+      ],
+      "metadata": {
+        "id": "G2G0X3mtDlsg",
+        "outputId": "9bcfebf7-24ee-45a9-f8c8-7314fa4e9c23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "t\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def defanging_ip_address(s:str):\n",
+        "  result =\"\"\n",
+        "  for item in s:\n",
+        "    if item != '.':\n",
+        "      result += item\n",
+        "    else:\n",
+        "      result += '[.]'\n",
+        "  return result\n"
+      ],
+      "metadata": {
+        "id": "1xT-6FTaKRcS"
+      },
+      "execution_count": 107,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(defanging_ip_address(\"1.1.1.1\"))"
+      ],
+      "metadata": {
+        "id": "iIulSgmbK_L2",
+        "outputId": "40e0d2cc-315a-4267-9ccb-cabc4ac74e1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1[.]1[.]1[.]1\n"
+          ]
+        }
+      ]
     }
   ]
 }
