--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMyEMq3ef65oB/GUz4z/3ec",
+      "authorship_tag": "ABX9TyNTirCcfvDyUGazQJ8gAZWR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -422,11 +422,11 @@
         "print(reverse_int(-123))"
       ],
       "metadata": {
-        "id": "Lyc6qmWdgZb6",
-        "outputId": "a558ebb9-234e-4ddf-9ed4-cab29920df20",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Lyc6qmWdgZb6",
+        "outputId": "a558ebb9-234e-4ddf-9ed4-cab29920df20"
       },
       "execution_count": 86,
       "outputs": [
@@ -472,11 +472,11 @@
         "backspace(\"ab#c\",\"ad#c\")"
       ],
       "metadata": {
-        "id": "irYhy9MHpHGj",
-        "outputId": "dafa0c79-a039-447d-c401-d1fa0c0b69b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "irYhy9MHpHGj",
+        "outputId": "dafa0c79-a039-447d-c401-d1fa0c0b69b4"
       },
       "execution_count": 93,
       "outputs": [
@@ -546,11 +546,11 @@
         "print(first_unique_char(\"lldeetcodea\"))"
       ],
       "metadata": {
-        "id": "G2G0X3mtDlsg",
-        "outputId": "9bcfebf7-24ee-45a9-f8c8-7314fa4e9c23",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G2G0X3mtDlsg",
+        "outputId": "9bcfebf7-24ee-45a9-f8c8-7314fa4e9c23"
       },
       "execution_count": 104,
       "outputs": [
@@ -587,11 +587,11 @@
         "print(defanging_ip_address(\"1.1.1.1\"))"
       ],
       "metadata": {
-        "id": "iIulSgmbK_L2",
-        "outputId": "40e0d2cc-315a-4267-9ccb-cabc4ac74e1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iIulSgmbK_L2",
+        "outputId": "40e0d2cc-315a-4267-9ccb-cabc4ac74e1a"
       },
       "execution_count": 108,
       "outputs": [
@@ -603,6 +603,45 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add_string(num1,num2):\n",
+        "  result =[]\n",
+        "\n",
+        "  i = len(num1)-1\n",
+        "  j = len(num2)-1\n",
+        "  carry =0 \n",
+        "\n",
+        "  while i >=0 or j >=0: \n",
+        "    summ = carry \n",
+        "    if i >=0:\n",
+        "      summ += ord(num1[i]-ord('0'))\n",
+        "      i -=1\n",
+        "    if j>=0:\n",
+        "      summ += ord(num2[j]-ord('0'))\n",
+        "      j -=1\n",
+        "\n",
+        "    result.append(summ%10)\n",
+        "    carry = summ/10 \n",
+        "\n",
+        "    i -=1\n",
+        "    j -=1\n",
+        "\n",
+        "  if carry !=0:\n",
+        "    result.append(carry)\n",
+        "\n",
+        "  return \"\".join(str(x) for x in result[::1])\n",
+        "  \n",
+        "\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "5SjP-ak3PPzp"
+      },
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
