--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNTirCcfvDyUGazQJ8gAZWR",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOFDjJHnKf0x977WeKK7Sko",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -641,6 +642,234 @@
         "id": "5SjP-ak3PPzp"
       },
       "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def longest_palindrome(s:str):\n",
+        "  count =0 \n",
+        "  myset = set()\n",
+        "\n",
+        "  for char in s:\n",
+        "    if char in myset:\n",
+        "      count +=1\n",
+        "      myset.remove(char)\n",
+        "    else:\n",
+        "      myset.add(char)\n",
+        "  \n",
+        "  count =count*2 \n",
+        "\n",
+        "  print(myset)\n",
+        "  if len(myset) >0:\n",
+        "    count +=1\n",
+        "  return count \n"
+      ],
+      "metadata": {
+        "id": "ZPunHsEqX6Yt"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(longest_palindrome(\"abccccdd\"))"
+      ],
+      "metadata": {
+        "id": "xQo1Yez6fckt",
+        "outputId": "6974d7c2-8b0c-4974-a032-0f14638cf6be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a', 'b'}\n",
+            "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Solution:\n",
+        "    def removeDuplicates(self, s: str) -> str:\n",
+        "      stack = []\n",
+        "\n",
+        "      for char in s:\n",
+        "        if stack and stack[-1] == char:\n",
+        "          stack.pop()\n",
+        "        else:\n",
+        "          stack.append(char)\n",
+        "      return \"\".join(stack)\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "48t_co5RBeQ6"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test= Solution()\n",
+        "print(test.removeDuplicates(\"azxxzy\"))"
+      ],
+      "metadata": {
+        "id": "BxnwKMOMCgLo",
+        "outputId": "837363b9-104a-48c7-fe86-8d61d494fe60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ay\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def removeDuplicates2(s:str,k:int)->str:\n",
+        "  stack = [] #char and count \n",
+        "  for char in s:\n",
+        "    if stack and stack[-1][0] == char:\n",
+        "      stack[-1][1] +=1\n",
+        "    else:\n",
+        "      stack.append([char,1])\n",
+        "\n",
+        "    if stack[-1][1] ==k:\n",
+        "      stack.pop()\n",
+        "      print(stack)\n",
+        "    \n",
+        "  res = \"\"\n",
+        "  for char,count in stack:\n",
+        "    res += (char*count)\n",
+        "  \n",
+        "  return res \n",
+        "    "
+      ],
+      "metadata": {
+        "id": "uNV6LhCSCuSi"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Hckftj9EEm1B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(removeDuplicates2(\"deeedbbcccbdaa\",3))"
+      ],
+      "metadata": {
+        "id": "kDsr5sTYEIUN",
+        "outputId": "5cc38521-df9d-4047-82fd-4240962e157b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['d', 1]]\n",
+            "[['d', 2], ['b', 2]]\n",
+            "[['d', 2]]\n",
+            "[]\n",
+            "aa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compress2(s:str)->str:\n",
+        "  stack = [] #char and count \n",
+        "  for char in s:\n",
+        "    if stack and stack[-1][0]== char:\n",
+        "      stack[-1][1] +=1\n",
+        "    else:\n",
+        "      stack.append([char,1])\n",
+        "  \n",
+        "  res = \"\"\n",
+        "  for char,count in stack:\n",
+        "    res +=char \n",
+        "    res += str(count)\n",
+        "  return res \n",
+        "    "
+      ],
+      "metadata": {
+        "id": "CvXlL4KaEnn8"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(compress2(\"abcd\"))"
+      ],
+      "metadata": {
+        "id": "3v51vGATEuS4",
+        "outputId": "e4997b13-494d-4c75-88ee-e5f5d0d910a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a1b1c1d1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List\n",
+        "from heapq import heappop,heappush\n",
+        "def kthLargestNumber(nums:List[str],k:int):\n",
+        "\n",
+        "  priority = []\n",
+        "\n",
+        "  for num in nums:\n",
+        "    heappush()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "jicHUVmqN7CO"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
