--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOFDjJHnKf0x977WeKK7Sko",
+      "authorship_tag": "ABX9TyMFCrUUfcJMs4j/S/rXoqhO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -362,7 +361,7 @@
       "metadata": {
         "id": "_WHa7B9RRjzn"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -377,7 +376,7 @@
       "metadata": {
         "id": "yjDCpizqWihI"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -414,7 +413,7 @@
       "metadata": {
         "id": "pjv6jSs5e4Qx"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -429,7 +428,7 @@
         "id": "Lyc6qmWdgZb6",
         "outputId": "a558ebb9-234e-4ddf-9ed4-cab29920df20"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,6 +439,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "N2H-rZQX_k5A"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -464,7 +474,7 @@
       "metadata": {
         "id": "zU9zTiQPoEWq"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -479,7 +489,7 @@
         "id": "irYhy9MHpHGj",
         "outputId": "dafa0c79-a039-447d-c401-d1fa0c0b69b4"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +537,7 @@
       "metadata": {
         "id": "LE33fCvrAdqw"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -553,7 +563,7 @@
         "id": "G2G0X3mtDlsg",
         "outputId": "9bcfebf7-24ee-45a9-f8c8-7314fa4e9c23"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,7 +589,7 @@
       "metadata": {
         "id": "1xT-6FTaKRcS"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -594,7 +604,7 @@
         "id": "iIulSgmbK_L2",
         "outputId": "40e0d2cc-315a-4267-9ccb-cabc4ac74e1a"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,7 +651,7 @@
       "metadata": {
         "id": "5SjP-ak3PPzp"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -668,7 +678,7 @@
       "metadata": {
         "id": "ZPunHsEqX6Yt"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +693,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,7 +723,7 @@
       "metadata": {
         "id": "48t_co5RBeQ6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -729,7 +739,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +775,7 @@
       "metadata": {
         "id": "uNV6LhCSCuSi"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -791,7 +801,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +837,7 @@
       "metadata": {
         "id": "CvXlL4KaEnn8"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -842,7 +852,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,6 +878,33 @@
       ],
       "metadata": {
         "id": "jicHUVmqN7CO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#intervals - key thing is to check for overlaps\n",
+        "\"\"\"\n",
+        "\"\"\"\n",
+        "from typing import List\n",
+        "def overlap(x:List[int],y:List[int]):\n",
+        "  return not(x[1]<y[0] or y[1]<x[0])\n"
+      ],
+      "metadata": {
+        "id": "M0QSizHO_mLq"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "QMj5HT9wr9yu"
       },
       "execution_count": null,
       "outputs": []
