--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFCrUUfcJMs4j/S/rXoqhO",
+      "authorship_tag": "ABX9TyNrNU6sPd5yP5lJTTpgS9lT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -901,10 +901,122 @@
     {
       "cell_type": "code",
       "source": [
+        "def meeting_room(intervals):\n",
+        "  intervals.sort()\n",
+        "  for i in range(len(intervals)-1):\n",
+        "    if overlap(intervals[i],intervals[i+1]):\n",
+        "      return False \n",
+        "  return True "
+      ],
+      "metadata": {
+        "id": "pk3hv-Fyt8yu"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def merge(intervals):\n",
+        "  result = []\n",
+        "  intervals.sort()\n",
+        "  for sublist in intervals:\n",
+        "    if not result or not overlap(result[-1],sublist):\n",
+        "      result.append(sublist)\n",
+        "    else:\n",
+        "      result[-1][1] = max(result[-1][1],sublist[1])\n",
+        "  return result"
+      ],
+      "metadata": {
+        "id": "Wlb9_ZRcuxn3"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def removeDuplicateFromSortedList(nums:List[int]):\n",
+        "  result = []\n",
+        "  window = 0 \n",
+        "  for i in range(len(nums)):\n",
+        "    if nums[window] != nums[i] or i == len(nums)-1:\n",
+        "      result.append(nums[window])\n",
+        "\n",
+        "      window = i\n",
+        "    else:\n",
+        "      continue \n",
+        "  return result  \n"
+      ],
+      "metadata": {
+        "id": "rJZ0ZFJv1ELl"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Node():\n",
+        "  def __init__(self,val,next=None):\n",
+        "    self.val = val\n",
+        "    self.next = next"
+      ],
+      "metadata": {
+        "id": "_QF0FLzm2iD8"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "QMj5HT9wr9yu"
+        "id": "Yz42L75l8RvC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "  intervals = [[1,3],[2,6],[8,10],[15,18]]\n",
+        "  interval2 = [[0,30],[5,10],[15,20]]\n",
+        "  print(merge(intervals))\n",
+        "  print(meeting_room(interval2))\n",
+        "  input = [0,0,1,1,1,2,2]\n",
+        "  print(removeDuplicateFromSortedList(input))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QMj5HT9wr9yu",
+        "outputId": "acf1eb4b-7a16-4b0b-c209-f01b51dd4696"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 6], [8, 10], [15, 18]]\n",
+            "False\n",
+            "[0, 1, 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "tvxcAnHSsjgV"
       },
       "execution_count": null,
       "outputs": []
