--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNrNU6sPd5yP5lJTTpgS9lT",
+      "authorship_tag": "ABX9TyNb+nMVwnXUqqS17pi8/zOH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -971,12 +971,65 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def find_all_anagrams(s:str,p:str):\n",
+        "  result = []\n",
+        "\n",
+        "  ns = len(s)\n",
+        "  np = len(p)\n",
+        "  dic_s = [0]*26\n",
+        "  dic_p = [0]*26\n",
+        "\n",
+        "  if ns < np:\n",
+        "    return []\n",
+        "  for char in p:\n",
+        "    dic_p[ord(char)-ord('a')] +=1\n",
+        "  \n",
+        "  for i in range(len(s)):\n",
+        "    dic_s[ord(s[i])-ord('a')] +=1\n",
+        "\n",
+        "    if i >= np:\n",
+        "      dic_s[ord(s[i-np]-ord('a'))] -=1\n",
+        "\n",
+        "    if dic_s == dic_p:\n",
+        "      result.append(i-np+1)\n",
+        "  return result\n"
       ],
       "metadata": {
         "id": "Yz42L75l8RvC"
       },
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def moveZeros(nums):\n",
+        "  index = 0 \n",
+        "  for i in range(len(nums)):\n",
+        "    if nums[i] !=0:\n",
+        "      nums[index] = nums[i]\n",
+        "      index +=1\n",
+        "  \n",
+        "  for i in range(index,len(nums)):\n",
+        "    nums[i] = 0 \n",
+        "\n",
+        "  return nums "
+      ],
+      "metadata": {
+        "id": "fa43Psz7jEIV"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "r3_-Rm-EkbZ4"
+      },
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -985,27 +1038,27 @@
         "if __name__ == '__main__':\n",
         "  intervals = [[1,3],[2,6],[8,10],[15,18]]\n",
         "  interval2 = [[0,30],[5,10],[15,20]]\n",
-        "  print(merge(intervals))\n",
-        "  print(meeting_room(interval2))\n",
+        "  #print(merge(intervals))\n",
+        "  #print(meeting_room(interval2))\n",
         "  input = [0,0,1,1,1,2,2]\n",
-        "  print(removeDuplicateFromSortedList(input))"
+        "  #print(removeDuplicateFromSortedList(input))\n",
+        "\n",
+        "  print(moveZeros([1,0,2,0,0,7]))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QMj5HT9wr9yu",
-        "outputId": "acf1eb4b-7a16-4b0b-c209-f01b51dd4696"
+        "outputId": "3b1eb991-9a82-46f2-e1c6-b3f3e0a3d47a"
       },
-      "execution_count": 22,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1, 6], [8, 10], [15, 18]]\n",
-            "False\n",
-            "[0, 1, 2]\n"
+            "[1, 2, 7, 0, 0, 0]\n"
           ]
         }
       ]
