--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNb+nMVwnXUqqS17pi8/zOH",
+      "authorship_tag": "ABX9TyOZfNw4mtRDder+YTMcdQa9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1024,12 +1024,32 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "def reverseList(head):\n",
+        "  prev = None \n",
+        "  current = head \n",
+        "  while current:\n",
+        "    temp = current.next\n",
+        "    current.next = prev\n",
+        "    prev= current \n",
+        "    current = temp \n",
+        "  return prev \n",
+        "  "
       ],
       "metadata": {
         "id": "r3_-Rm-EkbZ4"
       },
-      "execution_count": 7,
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "UUstRPOkR34-"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
